# simsys-metrics

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: go-ci.yml  release-drafter.yml  release.yml  scorecard.yml  test.yml
go/: CHANGELOG.md  README.md  baseline.go  baseline_test.go  buildinfo.go  buildinfo_test.go  doc.go  go.mod  go.sum  helpers.go  helpers_test.go  http.go  http_test.go  install_idempotent_test.go  install_test.go  main_test.go  method_normalization_test.go  metrics.go  middleware.go  middleware_panic_test.go  middleware_test.go  middleware_unmatched_test.go  process.go  process_test.go  progress.go  progress_test.go  registry.go  registry_test.go  testhelpers_test.go
node/: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
node/src/: baseline.ts  buildinfo.ts  index.ts  process.ts  progress.ts  registry.ts
node/tests/: cjs-resolve.test.ts  cpu-counter-race.test.ts  express.test.ts  hono.test.ts  install-codex-findings.test.ts  install-idempotent.test.ts  install-partial-failure.test.ts  (+9 more)
simsys_metrics/: __init__.py  _baseline.py  _http.py  _process.py  _registry.py  build_info.py  fastapi.py  flask.py  helpers.py  progress.py
tests/: conftest.py  demo_fastapi.py  test_build_info.py  test_exempt_paths_custom.py  test_fastapi_install.py  test_fastapi_install_multiproc.py  test_flask_install.py  test_flask_uncaught_exception.py  test_helpers.py  test_install_codex_findings.py  test_install_idempotent.py  test_install_partial_failure.py  test_install_self_audit_v0310.py  test_install_service_mismatch.py  test_method_normalization.py  test_prefix_guard.py  test_progress.py  test_track_job.py  test_track_queue.py  test_unmatched_route.py
(+5 files in other folders)
